--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "project-name",
+  "name": "react-sequencer",
   "private": false,
   "version": "0.1.0",
-  "description": "project-description",
+  "description": "Step sequencer built with React and the Web Audio API",
   "engines": {
     "node": "5.8.0",
     "npm": ">= 3.7.3"
   },
   "keywords": [
-    "new-react-project"
+    "step",
+    "sequencer",
+    "web audio",
+    "react"
   ],
   "dependencies": {
     "react": "^15.3.1",
@@ -18,18 +21,20 @@
   },
   "scripts": {
     "start": "node webpackDevServer",
-    "build": "NODE_ENV=production webpack -p --config webpack.config.prod.js"
+    "build": "NODE_ENV=production webpack -p --config webpack.config.prod.js",
+    "deploy": "npm run build && firebase deploy"
   },
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/YOUR_USERNAME/PROJECT_NAME.git"
+    "url": "git://github.com/markmur/react-sequencer.git"
   },
-  "author": "YOUR_NAME <YOUR_EMAIL>",
+  "author": "Mark Murray <mark.murray.ie@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.21.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -39,6 +44,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "eslint": "^3.5.0",
