--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "private": false,
   "version": "0.1.0",
   "description": "Step sequencer built with React and the Web Audio API",
-  "engines": {
-    "node": "5.8.0",
-    "npm": ">= 3.7.3"
-  },
   "keywords": [
     "step",
     "sequencer",
@@ -14,52 +10,77 @@
     "react"
   ],
   "dependencies": {
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-router": "^2.8.1",
-    "webpack": "^1.13.2"
+    "classnames": "^2.2.6",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "node webpackDevServer",
-    "build": "NODE_ENV=production webpack -p --config webpack.config.prod.js",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint-staged": "lint-staged"
   },
-  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/markmur/react-sequencer.git"
   },
   "author": "Mark Murray <mark.murray.ie@gmail.com>",
   "license": "MIT",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-html-attrs": "^2.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "classnames": "^2.2.5",
-    "clean-webpack-plugin": "^0.1.9",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.5.0",
-    "eslint-plugin-flowtype": "^2.18.1",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.2",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.4.2",
-    "precss": "^1.4.0",
-    "react-addons-test-utils": "^15.0.1",
-    "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-xo": "^0.25.0",
+    "eslint-config-xo-react": "^0.17.0",
+    "eslint-plugin-react": "^7.11.1",
+    "lint-staged": "^8.0.4",
+    "node-sass": "^4.10.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "^1.14.3",
+    "prettier-eslint": "^8.8.2",
+    "xo": "^0.23.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "bracketSpacing": true
+  },
+  "xo": {
+    "parser": "babel-eslint",
+    "envs": [
+      "browser",
+      "node"
+    ],
+    "prettier": true,
+    "space": true,
+    "rules": {
+      "camelcase": 0,
+      "import/no-unassigned-import": 0,
+      "unicorn/filename-case": 0
+    },
+    "extends": "xo-react",
+    "plugins": [
+      "react"
+    ]
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "prettier --write",
+      "git add",
+      "xo"
+    ]
+  },
+  "precommit": {
+    "run": [
+      "lint-staged"
+    ]
   }
 }
