--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "deploy": "npm run build && firebase deploy",
+    "deploy": "yarn build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
